--- a/public/styles.css
+++ b/public/styles.css
@@ -5,14 +5,14 @@
 
 body {
   font-family: 'Courier New', Courier, monospace;
-  background-color: #f8f8f8;
+  background-color: black;
   padding: 20px;
 }
 
 h1 {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #333;
+  color: #f8f8f8;
 }
 
 ul {
@@ -21,8 +21,18 @@ ul {
 }
 
 li {
-  background: #fff;
+  background: lightgrey;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: paleturquoise;
+  transition: background-color 0.3s ease;
+}
+
+a {
+  color: #f8f8f8;
 }
