--- a/public/common.css
+++ b/public/common.css
@@ -20,19 +20,10 @@ ul {
   padding: 0;
 }
 
-li {
-  background: lightgrey;
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-li:hover {
-  background-color: paleturquoise;
-  transition: background-color 0.3s ease;
-}
-
 a {
   color: #f8f8f8;
+}
+
+input {
+  width: 100%;
 }
