--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Liste des categories</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/common.css" />
   </head>
   <body>
     <a href="/">home</a>
