--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Liste des jeux</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/common.css" />
   </head>
   <body>
     <a href="/games">games</a>
