--- a/views/createGame.ejs
+++ b/views/createGame.ejs
@@ -27,10 +27,9 @@
       <div>
         <label for="platform">Platform</label>
         <select name="platform" id="platform">
-          <option value="Xbox">Xbox</option>
-          <option value="PS5">PS5</option>
-          <option value="PS4">PS4</option>
-          <option value="PC">PC</option>
+          <% platforms.forEach(platform => { %>
+            <option value="<%= platform.name %>"><%= platform.name %></option>
+          <% }) %>
         </select>
       </div>
       <button type="submit">
