--- a/views/games.ejs
+++ b/views/games.ejs
@@ -11,11 +11,22 @@
     <h1>Liste des jeux</h1>
     <ul>
       <% games.forEach(game => { %>
-        <li class="game-item">
-          <strong><%= game.title %></strong> - <%= game.category_name %>
-          (<%= game.platform %>)
-          - Stock: <%= game.stock_quantity %>
-        </li>
+        <div class="game-item">
+          <li>
+            <strong><%= game.title %></strong> - <%= game.category_name %>
+            (<%= game.platform %>)
+            - Stock: <%= game.stock_quantity %>
+          </li>
+          <form method="POST" action="/games/<%= game.id %>/delete">
+            <button 
+              class="delete-game-button"
+              type="submit" 
+              onclick="return confirm('Are u sure you want to delete this game?')"
+            >
+              delete
+            </button>
+          </form>
+        </div>
       <% }) %>
     </ul>
     <a href="/games/create">Create a game</a>
