--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Liste des categories</title>
     <link rel="stylesheet" href="/common.css" />
+    <link rel="stylesheet" href="/categories.css" />
   </head>
   <body>
     <a href="/">home</a>
@@ -16,5 +17,6 @@
         </li>
       <% }) %>
     </ul>
+    <a href="/categories/create">Create a category</a>
   </body>
 </html>
