--- a/views/createGame.ejs
+++ b/views/createGame.ejs
@@ -10,7 +10,7 @@
     <form class="create-game-form" method="POST" action="/games/create">
       <div>
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" />
+        <input type="text" name="title" id="title" required />
       </div>
       <div>
         <label for="category">Category</label>
@@ -22,7 +22,7 @@
       </div>
       <div>
         <label for="stock_quantity">Quantity</label>
-        <input type="number" name="stock_quantity" id="stock_quantity" />
+        <input type="number" name="stock_quantity" id="stock_quantity" required />
       </div>
       <div>
         <label for="platform">Platform</label>
